[tool.poetry]
name = "lowdash"
version = "1.3.0"
description = "A python implementation of lodash in javascript"
authors = ["abh80"]
license = "MIT"
readme='README.md'
repository = "https://github.com/abh80/lowdash"
keywords = ["lodash", "javascript", "python"]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
