[tool.poetry]
name = "lowdash"
version = "1.3.0"
description = "A python implementation of lodash in javascript"
authors = ["abh80 <boatgithub27@gmail.com>"]
license = "MIT"
readme='README.md'
repository = "https://github.com/abh80/lowdash"
keywords = ["lodash", "javascript", "python"]


[tool.poetry.dependencies]
python = "^3.7"
sphinx-rtd-theme = "^0.5.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.1"
furo = "^2021.7.5-beta.38"
black = "^21.7b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
